--- a/docs/cgo-demo/__cgo/panel.css
+++ b/docs/cgo-demo/__cgo/panel.css
@@ -285,26 +285,28 @@ details > summary {
    log config debug
    ----------------------------- */
 
-.devConfigGrid {
-  display: grid;
-  gap: 10px;
-}
+ /*
 
 .devRowSplit {
   display: grid;
-  grid-template-columns: 1fr 90px;
-  align-items: center;
+  grid-template-columns: max-content 140px;
   gap: 10px;
+  align-items: center;
+  justify-content: start;
 }
 
-.devRowSplit input[type="number"] {
-  width: 90px;
+.devRowSplit > span {
+  white-space: normal; 
 }
+
+
+
 .devDivider {
   border: 0;
-  border-top: 1px solid rgba(255, 255, 255, 0.12); /* tweak for your theme */
+  border-top: 1px solid rgba(255, 255, 255, 0.12); 
   margin: 12px 0 14px;
 }
+*/
 
 /* -----------------------------
    Search results layout
